setez automat FK-urile la entitatea cu ID 1

--- a/KendoUIMvcApplication/Web.config
+++ b/KendoUIMvcApplication/Web.config
@@ -69,6 +69,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ProductServiceContext" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=App_Data\Northwind.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="ProductServiceContext" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=|DataDirectory|\Northwind.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
