--- a/Test.Controllers/packages.config
+++ b/Test.Controllers/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
   <package id="Moq" version="3.1.416.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
+  <package id="structuremap" version="3.0.3.116" targetFramework="net451" />
   <package id="System.Data.SQLite" version="1.0.92.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.92.0" targetFramework="net451" />
   <package id="System.Data.SQLite.EF6" version="1.0.92.0" targetFramework="net451" />
