--- a/KendoUIMvcApplication/KendoUIMvcApplication.csproj
+++ b/KendoUIMvcApplication/KendoUIMvcApplication.csproj
@@ -182,21 +182,21 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\CustomerDemographic.cs" />
-    <Compile Include="Models\CustOrderHist_Result.cs" />
-    <Compile Include="Models\CustOrdersDetail_Result.cs" />
-    <Compile Include="Models\CustOrdersOrders_Result.cs" />
+    <Compile Include="Models\Results\CustOrderHist_Result.cs" />
+    <Compile Include="Models\Results\CustOrdersDetail_Result.cs" />
+    <Compile Include="Models\Results\CustOrdersOrders_Result.cs" />
     <Compile Include="Models\Employee.cs" />
-    <Compile Include="Models\Employee_Sales_by_Country_Result.cs" />
-    <Compile Include="Models\Northwind.Context.cs" />
+    <Compile Include="Models\Results\Employee_Sales_by_Country_Result.cs" />
+    <Compile Include="Infrastructure\Northwind.Context.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Region.cs" />
-    <Compile Include="Models\SalesByCategory_Result.cs" />
-    <Compile Include="Models\Sales_by_Year_Result.cs" />
+    <Compile Include="Models\Results\SalesByCategory_Result.cs" />
+    <Compile Include="Models\Results\Sales_by_Year_Result.cs" />
     <Compile Include="Models\Shipper.cs" />
     <Compile Include="Models\Supplier.cs" />
-    <Compile Include="Models\Ten_Most_Expensive_Products_Result.cs" />
+    <Compile Include="Models\Results\Ten_Most_Expensive_Products_Result.cs" />
     <Compile Include="Models\Territory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
