--- a/KendoUIMvcApplication/KendoUIMvcApplication.csproj
+++ b/KendoUIMvcApplication/KendoUIMvcApplication.csproj
@@ -175,7 +175,7 @@
       <DependentUpon>201404021138249_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Infrastructure\ProductServiceContext.cs" />
+    <Compile Include="ProductServiceContext.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\CustomerDemographic.cs" />
@@ -279,6 +279,9 @@
       <Project>{2617f373-4523-45b3-9fbb-2665cd62a91b}</Project>
       <Name>Infrastructure.Web</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
