--- a/Infrastructure.Test/Infrastructure.Test.csproj
+++ b/Infrastructure.Test/Infrastructure.Test.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="PrivateReflectionDynamicObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestContextFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
