--- a/Test.Northwind.Integration/Test.Northwind.Integration.csproj
+++ b/Test.Northwind.Integration/Test.Northwind.Integration.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{B9DFE0F5-091C-4FD9-9A01-32B90063F5A8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test.Controllers.Integration</RootNamespace>
-    <AssemblyName>Test.Controllers.Integration</AssemblyName>
+    <RootNamespace>Test.Northwind.Integration</RootNamespace>
+    <AssemblyName>Test.Northwind.Integration</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
