--- a/Northwind/Northwind.csproj
+++ b/Northwind/Northwind.csproj
@@ -67,36 +67,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\CategoryController.cs" />
-    <Compile Include="Controllers\CustomerController.cs" />
-    <Compile Include="Controllers\CustomerDemographicController.cs" />
-    <Compile Include="Controllers\EmployeeController.cs" />
-    <Compile Include="Controllers\OrderController.cs" />
-    <Compile Include="Controllers\ProductController.cs" />
-    <Compile Include="Controllers\RegionController.cs" />
-    <Compile Include="Controllers\ShipperController.cs" />
-    <Compile Include="Controllers\SupplierController.cs" />
-    <Compile Include="Controllers\TerritoryController.cs" />
-    <Compile Include="Handlers\ModifyOrderHandler.cs" />
-    <Compile Include="Handlers\ProductHandlers.cs" />
-    <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Customer.cs" />
-    <Compile Include="Models\CustomerDemographic.cs" />
-    <Compile Include="Models\Employee.cs" />
-    <Compile Include="Models\Order.cs" />
-    <Compile Include="Models\OrderDetail.cs" />
-    <Compile Include="Models\Product.cs" />
-    <Compile Include="Models\Region.cs" />
-    <Compile Include="Models\Results\CustOrderHist_Result.cs" />
-    <Compile Include="Models\Results\CustOrdersDetail_Result.cs" />
-    <Compile Include="Models\Results\CustOrdersOrders_Result.cs" />
-    <Compile Include="Models\Results\Employee_Sales_by_Country_Result.cs" />
-    <Compile Include="Models\Results\SalesByCategory_Result.cs" />
-    <Compile Include="Models\Results\Sales_by_Year_Result.cs" />
-    <Compile Include="Models\Results\Ten_Most_Expensive_Products_Result.cs" />
-    <Compile Include="Models\Shipper.cs" />
-    <Compile Include="Models\Supplier.cs" />
-    <Compile Include="Models\Territory.cs" />
+    <Compile Include="Product\CategoryController.cs" />
+    <Compile Include="Customer\CustomerController.cs" />
+    <Compile Include="Customer\CustomerDemographicController.cs" />
+    <Compile Include="Employee\EmployeeController.cs" />
+    <Compile Include="Order\OrderController.cs" />
+    <Compile Include="Product\ProductController.cs" />
+    <Compile Include="Employee\RegionController.cs" />
+    <Compile Include="Order\ShipperController.cs" />
+    <Compile Include="Order\SupplierController.cs" />
+    <Compile Include="Employee\TerritoryController.cs" />
+    <Compile Include="Order\ModifyOrderHandler.cs" />
+    <Compile Include="Product\ProductHandlers.cs" />
+    <Compile Include="Product\Category.cs" />
+    <Compile Include="Customer\Customer.cs" />
+    <Compile Include="Customer\CustomerDemographic.cs" />
+    <Compile Include="Employee\Employee.cs" />
+    <Compile Include="Order\Order.cs" />
+    <Compile Include="Order\OrderDetail.cs" />
+    <Compile Include="Product\Product.cs" />
+    <Compile Include="Employee\Region.cs" />
+    <Compile Include="Order\CustOrderHist_Result.cs" />
+    <Compile Include="Order\CustOrdersDetail_Result.cs" />
+    <Compile Include="Order\CustOrdersOrders_Result.cs" />
+    <Compile Include="Employee\Employee_Sales_by_Country_Result.cs" />
+    <Compile Include="Employee\SalesByCategory_Result.cs" />
+    <Compile Include="Employee\Sales_by_Year_Result.cs" />
+    <Compile Include="Product\Ten_Most_Expensive_Products_Result.cs" />
+    <Compile Include="Order\Shipper.cs" />
+    <Compile Include="Order\Supplier.cs" />
+    <Compile Include="Employee\Territory.cs" />
     <Compile Include="ProductServiceContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
