--- a/Northwind/packages.config
+++ b/Northwind/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
+  <package id="Strathweb.CacheOutput.WebApi2" version="0.5" targetFramework="net45" />
 </packages>
