--- a/KendoUIMvcApplication/KendoUIMvcApplication.csproj
+++ b/KendoUIMvcApplication/KendoUIMvcApplication.csproj
@@ -248,6 +248,10 @@
       <Project>{2617f373-4523-45b3-9fbb-2665cd62a91b}</Project>
       <Name>Infrastructure.Web</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Northwind.Cutomers\Customers.csproj">
+      <Project>{a516b29c-4d42-4f2f-aeb0-40e366f10694}</Project>
+      <Name>Customers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Northwind\Northwind.csproj">
       <Project>{9711d299-4e4d-4e78-80cf-5f65c787054c}</Project>
       <Name>Northwind</Name>
