--- a/KendoUIMvcApplication/KendoUIMvcApplication.csproj
+++ b/KendoUIMvcApplication/KendoUIMvcApplication.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\GridProfileStorage.cs" />
     <Compile Include="Migrations\201404021138249_Initial.cs" />
     <Compile Include="Migrations\201404021138249_Initial.Designer.cs">
       <DependentUpon>201404021138249_Initial.cs</DependentUpon>
@@ -257,9 +258,7 @@
       <Name>Northwind</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
