--- a/Infrastructure.Web/packages.config
+++ b/Infrastructure.Web/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
-  <package id="structuremap" version="3.0.3.116" targetFramework="net45" />
-  <package id="structuremap.web" version="3.0.0.108" targetFramework="net45" />
+  <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net451" />
+  <package id="log4net" version="2.0.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net451" />
+  <package id="structuremap" version="3.0.3.116" targetFramework="net451" />
+  <package id="structuremap.web" version="3.0.0.108" targetFramework="net451" />
 </packages>
