--- a/Customers/packages.config
+++ b/Customers/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
+  <package id="structuremap" version="3.0.3.116" targetFramework="net451" />
 </packages>
