--- a/Northwind/packages.config
+++ b/Northwind/packages.config
@@ -10,4 +10,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
   <package id="Strathweb.CacheOutput.WebApi2" version="0.5" targetFramework="net45" />
+  <package id="structuremap" version="3.0.3.116" targetFramework="net45" />
 </packages>
